# PHANTOM

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.sh  vercel.json
.github/workflows/: ci.yml  release.yml
crates/phantom-ai/: Cargo.toml
crates/phantom-ai/src/: agents.rs  backend.rs  claude_md.rs  client.rs  config.rs  context.rs  errors.rs  file_parser.rs  lib.rs  multi_agent.rs  ollama.rs  orchestrator.rs  prompts.rs  provider.rs  router.rs  tools.rs
crates/phantom-ai/src/skills/: ai_ml.rs  api_design.rs  architecture.rs  business.rs  code_gen.rs  compliance.rs  coordination.rs  cost_optimization.rs  data_engineering.rs  database.rs  devops.rs  documentation_skills.rs  frontend.rs  mod.rs  observability.rs  performance.rs  resilience.rs  security_skills.rs  testing.rs
crates/phantom-brain/: Cargo.toml
crates/phantom-brain/src/: chromadb.rs  chunker.rs  config.rs  embeddings.rs  errors.rs  knowledge.rs  lib.rs
crates/phantom-cli/: Cargo.toml
crates/phantom-cli/src/: dashboard.rs  main.rs
crates/phantom-cli/src/commands/: activate.rs  agents.rs  brain.rs  build.rs  cost.rs  doctor.rs  infra.rs  logs.rs  master.rs  mod.rs  self_update.rs  status.rs
crates/phantom-cli/tests/: integration_core.rs  integration_crypto.rs
crates/phantom-core/: Cargo.toml
crates/phantom-core/src/: agent_manager.rs  audit.rs  errors.rs  framework_ingestion.rs  job_queue.rs  lib.rs  message_bus.rs  parallel_executor.rs  pipeline.rs  self_healer.rs  task_graph.rs  zero_footprint.rs
crates/phantom-core/src/beyond_human/: mod.rs
crates/phantom-core/src/macos/: mod.rs
crates/phantom-core/src/pipeline/: executor.rs  mod.rs
crates/phantom-crypto/: Cargo.toml
crates/phantom-crypto/src/: aes256gcm.rs  argon2id.rs  ed25519.rs  encryption.rs  errors.rs  fingerprint.rs  hkdf_keys.rs  lib.rs  license.rs  master_key.rs  session.rs
crates/phantom-infra/: Cargo.toml
crates/phantom-infra/src/: accounts.rs  cloudflare.rs  dependencies.rs  doctor.rs  errors.rs  fly.rs  github_provider.rs  health.rs  installer.rs  lib.rs  neon.rs  oracle.rs  providers.rs  provisioner.rs  supabase.rs  traits.rs  upstash.rs  vercel.rs
crates/phantom-net/: Cargo.toml
crates/phantom-net/src/: config.rs  discovery.rs  errors.rs  lib.rs  mesh.rs  peer.rs  protocol.rs  relay.rs  swarm.rs  sync.rs  transport.rs
crates/phantom-storage/: Cargo.toml
crates/phantom-storage/src/: encrypted_store.rs  errors.rs  lib.rs  memory.rs  r2_client.rs  state.rs  traits.rs  vault.rs
docs/: AGENTS.md  GETTING_STARTED.md  OPERATIONS.md  PHANTOM_ARCHITECTURE_FRAMEWORK_v2.md  PHANTOM_CLAUDE.md  PHANTOM_GETTING_STARTED.md  PHANTOM_MULTI_AGENT_EXECUTION_PLAN.md  PHANTOM_README.md  SECURITY.md
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs
integration_tests/tests/: build_pipeline.rs  crypto_integration.rs  end_to_end.rs  extended.rs  knowledge_brain.rs
site/: vercel.json
site/public/: index.html  install.sh  vercel.json
site/public/releases/latest/: phantom-darwin-arm64  phantom-darwin-arm64.sha256  phantom-darwin-x64  phantom-darwin-x64.sha256
