[package]
name = "phantom-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Phantom AI: Anthropic client, agent prompts, context management, agent orchestration"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
phantom-crypto = { workspace = true }
