[package]
name = "phantom-brain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Phantom Knowledge Brain: ChromaDB client, embedding pipeline, semantic knowledge query"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
phantom-crypto = { workspace = true }
phantom-storage = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
