[package]
name = "phantom-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Phantom cryptographic primitives: Argon2id, Ed25519, AES-256-GCM, HKDF, machine fingerprinting"

[dependencies]
ring = { workspace = true }
ed25519-dalek = { workspace = true }
argon2 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
base62 = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true }
