[package]
name = "phantom-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Phantom infrastructure: 14+ provider clients, provisioner, health checks, account creation, dependency installer"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
hmac = "0.12"
phantom-crypto = { workspace = true }
phantom-storage = { workspace = true }
