[package]
name = "phantom-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Phantom storage: encrypted R2/S3 client, credential vault, zero-footprint state management"

[dependencies]
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
phantom-crypto = { workspace = true }
